--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
+    "jotai": "^2.5.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
